# code-reviewer-tier-1-agent-build

./: .gitignore  .linear_project.json  README.md  app_spec.txt  init.sh
code_reviewer_agent/: .env.example  README.md  init.sh  pyproject.toml  requirements.txt
code_reviewer_agent/config/: agent_config.yaml
code_reviewer_agent/config/personas/: code_reviewer.yaml
code_reviewer_agent/scripts/: validate_setup.py
code_reviewer_agent/src/: __init__.py
code_reviewer_agent/src/agent/: __init__.py  claude_interface.py  core_engine.py  persona_loader.py
code_reviewer_agent/src/models/: __init__.py  academy_models.py  persona.py  review_models.py
code_reviewer_agent/src/review/: __init__.py  orchestrator.py  report_generator.py  repository_handler.py
code_reviewer_agent/src/review/language_processors/: __init__.py  java_processor.py  javascript_processor.py  python_processor.py  typescript_processor.py
code_reviewer_agent/src/tools/: __init__.py  academy_resolver.py
code_reviewer_agent/src/tools/code_analyzers/: __init__.py  ast_analyzer.py  pattern_matcher.py  quality_metrics.py  security_scanner.py
code_reviewer_agent/tests/: __init__.py  test_academy_integration.py  test_code_analysis.py  test_persona_loading.py  test_review_generation.py
code_reviewer_agent/tests/fixtures/sample_repositories/: __init__.py  sample_python.py
