[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-reviewer-agent"
version = "1.0.0"
description = "Autonomous code reviewer agent with Claude integration"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.26.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
